--- a/hrm/hrm_tool/templates/hrm_tool/home.html
+++ b/hrm/hrm_tool/templates/hrm_tool/home.html
@@ -12,15 +12,15 @@
 {% endif %}
 
 {% if name == 'seniormanager' %}
-
+	{{profile.first_name}}
 {% endif %}
 
 {% if name == 'manager' %}
-
+	{{profile.first_name}}
 {% endif %}
 
 {% if name == 'employee' %}
-
+	{{profile.first_name}}
 {% endif %}
 
 </body>
