--- a/hrm/hrm_tool/templates/hrm_tool/home.html
+++ b/hrm/hrm_tool/templates/hrm_tool/home.html
@@ -9,18 +9,22 @@
 
 {% if name == 'seniorvicepresident' %}
 	{{profile.first_name}}
+	{{name}}
 {% endif %}
 
 {% if name == 'seniormanager' %}
 	{{profile.first_name}}
+	{{name}}
 {% endif %}
 
 {% if name == 'manager' %}
 	{{profile.first_name}}
+	{{name}}
 {% endif %}
 
 {% if name == 'employee' %}
 	{{profile.first_name}}
+	{{name}}
 {% endif %}
 
 </body>
