--- a/hrm/hrm_tool/templates/hrm_tool/login.html
+++ b/hrm/hrm_tool/templates/hrm_tool/login.html
@@ -2,32 +2,17 @@
 <html lang="en-us" >
 <head>
 <title>Log in</title>
-
-
 </head>
 
 
 <body>
-
+<br>
+<br>
+<br>
 <!-- Container -->
-<div id="container">
-    
-    
-
-    
-        
-    
-
-    <!-- Content -->
-    <div id="content">
-        
-        
-        
-
-
-
-
-<div id="content-main">
+<center>
+<div id="container" style="width:30%;background-color:#FFA500;">
+  <br>
 <form action="" method="post" id="login-form">{% csrf_token %}
   <div class="form-row">
     
@@ -38,21 +23,17 @@
     <label class="required">Password:</label> <input id="password" name="password" type="password" />
 
   </div>
-  
- <button type="submit">Sign in</button>
+  <br>
+<div>
+  <button type="submit">Sign in</button>
+</div>
+ <br>
  
 </form>
 
 
 </div>
-
-        
-        <br class="clear" />
-    </div>
-    <!-- END Content -->
-
-    <div id="footer"></div>
-</div>
+</center>
 <!-- END Container -->
 
 </body>
